[gd_scene load_steps=11 format=2]

[ext_resource path="res://Players_02.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/pixil-frame-0.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://scripts/game_manager.gd" type="Script" id=4]
[ext_resource path="res://scripts/game_score.gd" type="Script" id=5]
[ext_resource path="res://scripts/screen_shake.gd" type="Script" id=6]
[ext_resource path="res://images/pixil-frame-0 (1).png" type="Texture" id=7]
[ext_resource path="res://images/1024px-Location_dot_red.svg.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Theme" id=2]

[node name="GameManager" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": "Controls the main loops within gameplay. 
Is not same with main menu."
}

[node name="water" type="Sprite" parent="."]
position = Vector2( -300, 0.847 )
rotation = 1.39626
scale = Vector2( 10, 1 )
texture = ExtResource( 7 )

[node name="PlayerRoad" parent="." instance=ExtResource( 1 )]

[node name="Obstacle" type="Node2D" parent="."]
position = Vector2( 249.792, 164.376 )

[node name="RigidBody2D" type="RigidBody2D" parent="Obstacle"]
position = Vector2( 1.08813, -1.08807 )
mode = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacle/RigidBody2D"]
position = Vector2( -2.11212, 1.8269 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Obstacle/RigidBody2D"]
position = Vector2( -2.64447, 0.672852 )
scale = Vector2( 0.239998, 0.240005 )
texture = ExtResource( 3 )

[node name="GameText" type="RichTextLabel" parent="."]
anchor_right = 0.026
margin_left = -495.089
margin_top = -284.231
margin_right = -295.089
margin_bottom = -264.231
rect_scale = Vector2( 1.08, 1 )
tab_size = 7
text = "Asphalt left:"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 6 )

[node name="ShakeTween" type="Tween" parent="Camera2D"]

[node name="Frequency" type="Timer" parent="Camera2D"]

[node name="Duration" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Panel" type="Panel" parent="."]
margin_left = 443.713
margin_top = -18.9547
margin_right = 483.713
margin_bottom = 21.0453
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="Panel"]
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 3 )

[node name="Button" type="Button" parent="Panel"]
margin_right = 12.0
margin_bottom = 20.0
rect_scale = Vector2( 0.08, 0.0799997 )
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextBrickPanel" type="Panel" parent="."]
margin_left = -14.8749
margin_top = -258.281
margin_right = 25.1251
margin_bottom = -218.281
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextBrickTexture" type="TextureRect" parent="NextBrickPanel"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.160001, 0.200001 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Camera2D/Frequency" to="Camera2D" method="_on_Frequency_timeout"]
[connection signal="timeout" from="Camera2D/Duration" to="Camera2D" method="_on_Duration_timeout"]
